# TTSDK

./: .jitpack.yml  build.gradle  gradle.properties  settings.gradle
TTSDK/: build.gradle  google-services.json  proguard-rules.pro
TTSDK/src/main/: AndroidManifest.xml
TTSDK/src/main/assets/: TTENTBC_v1.tflite  c_Loading2.json  c_box.json  c_loading.json  cat_act_loading.json  cat_eye.json  cat_teeth.json  circle.json  dd_loading1.json  dog_act_loading.json  dog_body.json  dog_ear.json  dog_eye.json  dog_paw.json  dog_teeth.json  han.json  joint_android.json  labelmap2.txt  notice.json  splash.json  state_01_off.json  state_01_on.json  state_02_off.json  state_02_on.json  state_03_off.json  state_03_on.json
TTSDK/src/main/cpp/: CMakeLists.txt  native-lib.cpp
TTSDK/src/main/res/anim/: alpha.xml  alpha2.xml  alpha3.xml  alpha4.xml  anim_scale.xml  bottom_off.xml  bottom_on.xml  carealpha.xml  expand_and_fade_out.xml  fade_in.xml  fade_in_intro.xml  fade_in_intro_fast.xml  fade_in_success.xml  fade_out.xml  fade_out_intro.xml  fade_out_intro_fast.xml  fade_out_success.xml  hashin.xml  hashout.xml  push_up_in.xml  rotate.xml  rotate1.xml  rotate3.xml  slide_down.xml  slide_down2.xml  slide_down3.xml  slide_down_slow.xml  slide_from_down.xml  slide_from_down_delay.xml  slide_from_down_short.xml  slide_from_left.xml  slide_from_right.xml  slide_to_down.xml  slide_to_left.xml  slide_to_left_zero.xml  slide_to_left_zero2.xml  slide_to_right.xml  slide_to_right_zero.xml  slide_to_right_zero2.xml  slide_up.xml  (+7 more)
gradle/wrapper/: gradle-wrapper.properties
(+222 files in other folders)
